--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+
+This project is based upon the excellent MIUI SoundRecord project. More information that below.
+
+It has been customized for use as a simple sound recorder plugin for ChatSecureAndroid's audio messaging feature.
+
+
+************************************************************************
 [中文]
 
 1. 本项目是MIUI录音机的社区开源版，由MIUI团队(www.miui.com) 发起并贡献第一批代码，遵循NOTICE文件所描述的开源协议，
