--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- application name and title of error dialogs-->
-    <string name="app_name">Sound Recorder</string>
+    <string name="app_name">ChatSecureVoicePlugin</string>
 
     <!-- Screen title before and during recording -->
     <!-- Screen title after recording -->
